# Atenex_nova

./: .gitignore  AGENTS.md  Modelfile  README.md  docker-compose.yml  install_gpu_deps.ps1
backend/: pyproject.toml  ruff.toml  test_docling.py  test_out.json  test_reranker.py  test_sample.md  test_splade.py  update_mem_enrichment.py  update_orchestrator.py
backend/atenex_nova/: dependencies.py  main.py
backend/atenex_nova/application/commands/: ask_query.py
backend/atenex_nova/application/orchestrators/: answer_orchestrator.py  ingestion_orchestrator.py  retrieval_orchestrator.py
backend/atenex_nova/application/policies/: answer_planning_policy.py  context_packing_policy.py  indexing_policy.py  query_routing_policy.py  token_budget_policy.py  visual_index_policy.py
backend/atenex_nova/application/services/: __init__.py  answer_service.py  collection_cleanup_service.py  collection_service.py  document_read_service.py  document_service.py  evaluation_service.py  import_session_service.py  job_service.py  quantization_policy_service.py  query_service.py  rebuild_service.py
backend/atenex_nova/domain/entities/: __init__.py  answer.py  chat.py  chunk.py  citation.py  collection.py  document.py  document_node.py  evidence_item.py  job.py  proposition.py  query.py  relation_edge.py  summary_node.py
backend/atenex_nova/domain/events/: document_events.py
backend/atenex_nova/domain/ports/: candidate_index.py  dense_index.py  quantizer.py
backend/atenex_nova/domain/repositories/: __init__.py  answer_repository.py  chunk_repository.py  citation_repository.py  collection_repository.py  document_repository.py  embedder.py  job_repository.py  node_repository.py  proposition_repository.py  query_repository.py  relation_repository.py  summary_repository.py  vector_index.py
backend/atenex_nova/domain/value_objects/: identifiers.py  metadata.py
backend/atenex_nova/evaluation/: models.py
backend/atenex_nova/evaluation/datasets/: baseline.json  manager.py
backend/atenex_nova/evaluation/regression/: comparator.py
backend/atenex_nova/evaluation/scorers/: answer_scorer.py  retrieval_scorer.py
backend/atenex_nova/infrastructure/db/: session.py
backend/atenex_nova/infrastructure/embeddings/: bm25_encoder.py  embedding_adapter.py  reranker_adapter.py
backend/atenex_nova/infrastructure/files/: blob_store.py
backend/atenex_nova/infrastructure/graph/: graph_store.py
backend/atenex_nova/infrastructure/indexes/: bm25_adapter.py  candidate_index_factory.py  purepy_candidate_index.py  qdrant_dense_adapter.py  quantized_code_store.py  turboquant_candidate_index.py
backend/atenex_nova/infrastructure/llm/: llm_gateway.py
backend/atenex_nova/infrastructure/parsing/: docling_adapter.py
backend/atenex_nova/infrastructure/qdrant/: qdrant_adapter.py
backend/atenex_nova/infrastructure/vector_quantization/: profile_registry.py  turboquant_adapter.py
backend/atenex_nova/infrastructure/visual/: colpali_adapter.py
backend/atenex_nova/shared/config/: settings.py
backend/atenex_nova/workers/: main.py  runner.py  sqlite_lock.py
backend/scripts/: clean_all.py  diagnose_qdrant_orphans.py
backend/storage/visual_pages/: b9cb76c4-d5f3-4e8c-811c-de755b6d33d0.json  c81c2823-f4ef-4f90-a9f9-45e2741478a6.json
backend/tests/e2e/: test_api_surface_chat_history_e2e.py  test_chat_endpoints_e2e.py  test_document_ingestion_e2e.py
backend/tests/integration/: test_cleanup_removes_codes.py  test_ingest_single_copy.py  test_llm_runtime_health.py  test_phase4_phase5.py  test_phase6_phase7.py  test_phase8_phase9.py  test_retrieval_purepy.py
backend/tests/unit/: test_answer_orchestrator_llm.py  test_candidate_index_factory.py  test_citation_binding.py  test_context_packing_policy.py  test_docling_parser_adapter.py  test_document_local_registration.py  test_domain_entities.py  test_embeddings_fallback_health.py  test_evaluation_scorers.py  test_grounding_floor.py  test_health_router.py  test_import_sessions.py  test_imports_without_turbovec.py  test_ingestion_source_path_resolution.py  test_openapi_documentation_contract.py  test_purepy_candidate_index.py  test_query_routing_policy.py  test_turboquant.py  test_visual_index_policy.py
(+79 files in other folders)
