[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atenex-nova"
version = "0.1.0"
description = "Plataforma local de memoria documental y RAG de nueva generación"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Atenex Team" }]

dependencies = [
    # --- Framework API ---
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # --- ORM / Persistence ---
    "sqlalchemy[asyncio]>=2.0.30",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # --- Validation / Config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Vector DB ---
    "qdrant-client>=1.10.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "docling>=2.0.0",
    "colpali-engine>=0.3.0",
    "torch>=2.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx",  # for TestClient
]
all = [
    "atenex-nova[ml,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["atenex_nova"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["docling.*", "colpali_engine.*", "sentence_transformers.*"]
ignore_missing_imports = true
